// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a Header1 icon 1`] = `
<span
  data-active={false}
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <svg
    className={undefined}
    colorLabelClassName={undefined}
    colorStyle={undefined}
    evenClassName={undefined}
    height="18px"
    strokeMitterClassName={undefined}
    transparentClassName={undefined}
    viewBox="0 0 18 18"
    width="18px"
  >
    <line
      className="ql-stroke"
      x1="3"
      x2="3"
      y1="4"
      y2="14"
    />
    <line
      className="ql-stroke"
      x1="11"
      x2="11"
      y1="4"
      y2="14"
    />
    <line
      className="ql-stroke"
      x1="11"
      x2="3"
      y1="9"
      y2="9"
    />
    <line
      className="ql-stroke ql-thin"
      x1="13.5"
      x2="15.5"
      y1="14.5"
      y2="14.5"
    />
    <path
      className="ql-fill"
      d="M14.5,15a0.5,0.5,0,0,1-.5-0.5V12.085l-0.276.138A0.5,0.5,0,0,1,13.053,12c-0.124-.247-0.023-0.324.224-0.447l1-.5A0.5,0.5,0,0,1,15,11.5v3A0.5,0.5,0,0,1,14.5,15Z"
    />
  </svg>
</span>
`;

exports[`create a Header2 icon 1`] = `
<span
  data-active={false}
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <svg
    className={undefined}
    colorLabelClassName={undefined}
    colorStyle={undefined}
    evenClassName={undefined}
    fillClassName={undefined}
    height="18px"
    strokeMitterClassName={undefined}
    transparentClassName={undefined}
    viewBox="0 0 18 18"
    width="18px"
  >
    <line
      className="ql-stroke"
      x1="3"
      x2="3"
      y1="4"
      y2="14"
    />
    <line
      className="ql-stroke"
      x1="11"
      x2="11"
      y1="4"
      y2="14"
    />
    <line
      className="ql-stroke"
      x1="11"
      x2="3"
      y1="9"
      y2="9"
    />
    <path
      className="ql-stroke ql-thin"
      d="M15.5,14.5h-2c0-.234,1.85-1.076,1.85-2.234a0.959,0.959,0,0,0-1.85-.109"
    />
  </svg>
</span>
`;
